--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<p>Hello</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=https://webhosting2022.000webhostapp.com/index1.html" />
+  </head>
+</html>
