--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url="https://islam-ahmed20.000webhostapp.com/index1.html" />
+    <meta http-equiv="Refresh" content="0; url=https://islam-ahmed20.000webhostapp.com/index1.html" />
   </head>
 </html>
